--- a/requirements.txt
+++ b/requirements.txt
@@ -1,8 +1,6 @@
-ansible==2.8.0
-cffi==1.14.5
-cryptography==3.4.7
-Jinja2==3.0.1
-MarkupSafe==2.0.1
-pkg-resources==0.0.0
-pycparser==2.20
-PyYAML==5.4.1
+pylint
+cython
+flake8
+pytest-cov
+pytest
+black
